Limit logging details for predictions
